# Grondmechanica

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/: glfw3dll.lib  nanogui.lib
src/: Grond.cpp  Grond.h  Source.cpp
